# playlist-pilot

./: .dockerignore  .gitignore  AGENTS.md  BUGS.md  Dockerfile  FIXED_BUGS.md  README.md  ROADMAP.md  TODO.md  __init__.py  config.py  docker-compose.yml  env.example  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: SECURITY.md
Docs/: advanced_usage.md  api_reference.md  architecture.md  configuration.md  contributing.md  docker_compose_installation.md  docker_installation.md  local_installation.md  navidrome_implementation_plan.md  playlist_management.md  sample_history.json  secure_credentials.md  suggestion_pipeline_spec.md  tests.md  usage_guide.md
api/: forms.py  routes.py  routes.py.save  routes.py.save.1  schemas.py
cache/: cache.db
core/: analysis.py  constants.py  history.py  m3u.py  models.py  playlist.py  templates.py
data/: .cache-spotify
logs/: playlist_pilot.log.1  playlist_pilot.log.2  playlist_pilot.log.3
services/: __init__.py  apple_music.py  applemusic.py  getsongbpm.py  gpt.py  jellyfin.py  lastfm.py  listenbrainz.py  media_factory.py  media_server.py  metube.py  musicbrainz.py  navidrome.py  spotify.py
static/: style.css
templates/: analysis_result.html  analyze.html  base.html  compare.html  error.html  history.html  macros.html  order_results.html  playlists.html  results.html  settings.html
tests/: conftest.py  test_analysis.py  test_api_routes.py  test_api_versioning.py  test_apple_music.py  test_applemusic.py  test_config.py  test_cross_service_metadata.py  test_duration_helper.py  test_forms.py  (+24 more)
(+24 files in other folders)
